src/objects/Carta__c.object
<CustomObject>
    <fields>
        <fullName>Banco__c</fullName>
        <label>Banco</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fecha_de_aprobacion__c</fullName>
        <label>Fecha de aprobación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nit__c</fullName>
        <description>Nit del Banco</description>
        <inlineHelpText>Nit del Banco</inlineHelpText>
        <label>Nit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Cartas</relationshipLabel>
        <relationshipName>Cartas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito_en_letras__c</fullName>
        <description>Valor del crédito en letras</description>
        <label>Valor del crédito en letras</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>